--- a/src/index.css
+++ b/src/index.css
@@ -77,9 +77,9 @@ body {
   cursor: pointer;
   flex-shrink: 0;
   font-family: "Roboto", sans-serif;
-  font-size: 1.5vw;
+  font-size: calc(16px + 0.5vw);
   font-weight: 500;
-  height: 5vw;
+  height: calc(2rem + 2.5vw);
   padding: 0 1.5vw;
   text-align: center;
   transition: all 0.5s;
